--- a/2023ECE226Note/collection/chapter2.tex
+++ b/2023ECE226Note/collection/chapter2.tex
@@ -1,13 +1,13 @@
 \chapter{Sequential Experiments}
 \begin{enumerate}
-    \item Tree Diagrams
-    \item Counting Methods (\textbf{Essentially the outcomes in each experiment (i.e., sample space) are equiprobable})
+    \item Counting Methods 
+    % (\textbf{Essentially the outcomes in each experiment (i.e., sample space) are equiprobable})
     \begin{enumerate}
         \item Multiplication:~$n\times k_1\times k_2\times \ldots$
         \item Sampling without Replacement
         \begin{enumerate}
-            \item Permutation:~$\frac{n!}{(n-k)!}$.
-            \item Combination:~$\binom{n}{k}=\frac{n!}{k!(n-k)!}=\binom{n}{n-k}$.
+            \item Permutation (or Arrangement):~${}_n A_k=\frac{n!}{(n-k)!}$.
+            \item Combination:~${}_n C_k=\binom{n}{k}=\frac{n!}{k!(n-k)!}=\binom{n}{n-k}$.
             \item Combination is Permutation without order. Combination is also called n choose k.
         \end{enumerate}
         \item Sampling with Replacement:~$n^k$
@@ -18,11 +18,13 @@
             \end{enumerate}
             }
     \end{enumerate}
-    \item Independent Trails (\textbf{Essentially the outcomes in each sample space are not necessarily equiprobable})
+    \item Independent Trails 
+    % (\textbf{Essentially the outcomes in each sample space are not necessarily equiprobable})
     \begin{enumerate}
-        \item \textit{Theorem 2.8:} The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\P{k_0, k_1}=\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}.\]
+        \item \textit{Theorem 2.8:} The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}.\]
         \item \textit{Theorem 2.9:} $n=k_1+k_2+\cdots+k_m$ and success rates are $p_1, p_2,\ldots,p_m$, where $\sum_{i=1}^{m}p_i=1$ has
-        \[\P{k_1,k_2,\ldots,k_m}=\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.\]
+        \[\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.\]
         % \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
     \end{enumerate}
+    \item Tree Diagram
 \end{enumerate}
