--- a/2023ECE226Syllabus/Syllabus.tex
+++ b/2023ECE226Syllabus/Syllabus.tex
@@ -49,7 +49,7 @@ The students will learn the fundamentals of probability that are necessary for s
 
 \textbf{Contact:} kw414@scarletmail.rutgers.edu.
 
-\textbf{Prerequisites:} Calculus.
+\textbf{Prerequisites:} Calculus (Mandatory), Linear Algebra (Recommended).
 
 \textbf{Grading:} {
     \begin{itemize}
@@ -58,14 +58,15 @@ The students will learn the fundamentals of probability that are necessary for s
                 \item HW Presentation: 20 times$\times$1 credit
                 \item Exam: 2 times$\times$50 credits
                 \item Bonus Project: 1 times$\times$20 credits
+                \item Optional Final: 1 times$\times$20 credits
             \end{itemize}
         }
         \item Exam Formats: {
             \begin{itemize}
-                \item In total 150 points in each exam. Each will convert to 50 credits in final grade.
+                \item In total 100 points in each exam. Each will convert to 50 credits in final grade.
                 \item 80 points questions from HW. No partial credit. Need a complete calculation process.
-                \item 40 points questions modified from HW. No partial credit. Fill the blank.
-                \item 30 points challenge questions. Multiple-choice. Probability class deserves some randomness.
+                \item 20 points questions modified from HW. No partial credit. Fill the blank.
+                % \item 50 points challenge questions. Format unknown.
             \end{itemize}
         }
     \end{itemize}
@@ -73,43 +74,51 @@ The students will learn the fundamentals of probability that are necessary for s
 
 \textbf{Textbook and Materials:} {
     \begin{enumerate}
-        \item \textbf{(Best For Beginner and Engineer)} \fullcite{Yates_Goodman_2015}
+        \item \textbf{(Best For Beginner and Engineer)} \fullcite{Yates_Goodman_2015}\label{book:Yates_Goodman_2015}
 
         \href{https://bcs.wiley.com/he-bcs/Books?action=index&itemId=1118324560&bcsId=8677}{\textbf{Student Companion Site}}
         \item \textbf{(Beginner Alternative)} \fullcite{94107244}
         % \item \textbf{(Classic Alternative)} \fullcite{91610706}
-        \item \textbf{(Online Alternative)} \href{https://www.probabilitycourse.com/}{Introduction to Probability, Statistics, and Random Processes} by Pishro-Nik
-        \item \textbf{(Modern Alternative)} \href{https://www.stat.berkeley.edu/~aldous/134/grinstead.pdf}{Introduction to Probability} by Grinstead and Snell
+        \item \textbf{(Engineer Alternative)} \href{https://www.probabilitycourse.com/}{Introduction to Probability, Statistics, and Random Processes} by Pishro-Nik
+        % \item \textbf{(Modern Alternative)} \href{https://www.stat.berkeley.edu/~aldous/134/grinstead.pdf}{Introduction to Probability} by Grinstead and Snell
         % \item \textbf{(Optional)} \fullcite{93738109}
         % \item \textbf{(Advanced Choice)} \fullcite{94013254}
     \end{enumerate}
 }
 
-\textbf{Topics Covered By Day:} {
+\textbf{Extended Reading:}{
+    \begin{enumerate}
+            \item \textbf{(Publication of Turing Award Recipients)} \fullcite{98333950}
+            \item \textbf{(Publication of Nobel Memorial Prize in Economic Sciences Recipients)} \fullcite{93150815}
+            \item \textbf{(Read at Your Own Risk!!!)} \fullcite{93574984}
+    \end{enumerate}
+}
+
+\textbf{Topics Covered By Day (Based on Textbook \cref{book:Yates_Goodman_2015}):} {
     \begin{enumerate}[\textbf{Day} 1]
         \item Course Introduction and Review of Calculus
-        \item Combinatorics Analysis, Counting Methods
+        \item \textbf{(Chapter 1,2)} Combinatorics, Counting Methods, Set Theory, Axioms of Probability, Venn Diagrams
         \item Examples and Exercises
-        \item Set Theory, Axioms of Probability, Bayes, Independence, Venn Diagrams, Tree Diagrams
+        \item \textbf{(Chapter 1,2)}Conditional Probability, Bayes Theorem, Independence, Tree Diagrams
         \item Examples and Exercises
-        \item PMF, Discrete Random Variables, CDF, Derived Random Variable, Expectation
+        \item \textbf{(Chapter 3)}PMF, Discrete Random Variables, CDF, Expectation
         \item Examples and Exercises
-        \item CDF, Continuous Random Variables, PDF, Gaussian Random Variable, Delta Function
+        \item \textbf{(Chapter 4)}CDF, Continuous Random Variables, PDF, Gaussian Random Variable, Delta Function
         \item Examples and Exercises
-        \item Review
-        \item Exam 1
-        \item Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
-        \item Examples and Exercises
-        \item Discrete/Continuous Functions of multiple Random Variables yielding Discrete/Continuous Outputs
-        \item Examples and Exercises
-        \item Conditional Probability Model
-        \item Examples and Exercises
-        \item Sum of Random Variables and Moment Generating Function
+        \item \textbf{(Chapter 5)}Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
         \item Examples and Exercises
         \item Review
-        \item Exam 2
-        \item Random Vector, Convergence and Intro to Stochastic Process
-        \item Bonus Presentation
+        \item Exam 1 (Cover Day1 to Day9)
+        \item \textbf{(Chapter 7)}Conditional Probability Models
+        \item Examples and Exercises
+        \item \textbf{(Chapter 6,9)}Derived Random Variables, Moment Generating Function and Central Limit Theorem
+        \item Examples and Exercises
+        \item Introduction of Information Theory
+        \item Examples and Exercises
+        \item Review
+        \item Exam 2 (Cover Day10 to Day19)
+        \item Random Topics
+        \item Bonus Presentation and Optional Final
     \end{enumerate}
 }
 
