--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -77,6 +77,7 @@
 \DeclareMathOperator{\Lap}{\mathsf{Lap}}
 \DeclareMathOperator{\Gaus}{\mathsf{N}}
 \DeclareMathOperator{\Weibull}{\mathsf{Weibull}}
+\DeclareMathOperator{\Erlang}{\mathsf{Erlang}}
 
 %%%% Special norms and linear algebra stuff
 \newcommand*{\subgnorm}[1]{\norm*{#1}_{\psi_2}}
