--- a/2023ECE226Note/collection/chapter2.tex
+++ b/2023ECE226Note/collection/chapter2.tex
@@ -1,30 +1,76 @@
-\chapter{Sequential Experiments}
+\chapter{Conditional Probability and Independence}
+
+\section{Conditional Probability}
+\begin{theorem}
+    [Conditional Probability]
+    If $\P{B}>0$, then
+    \[\condP{A}{B} = \frac{\P{AB}}{\P{B}}.\]
+\end{theorem}
 \begin{enumerate}
-    \item Counting Methods 
-    % (\textbf{Essentially the outcomes in each experiment (i.e., sample space) are equiprobable})
-    \begin{enumerate}
-        \item Multiplication:~$n\times k_1\times k_2\times \ldots$
-        \item Sampling without Replacement
-        \begin{enumerate}
-            \item Permutation (or Arrangement):~${}_n A_k=\frac{n!}{(n-k)!}$.
-            \item Combination:~${}_n C_k=\binom{n}{k}=\frac{n!}{k!(n-k)!}=\binom{n}{n-k}$.
-            \item Combination is Permutation without order. Combination is also called n choose k.
-        \end{enumerate}
-        \item Sampling with Replacement:~$n^k$
-        \item Multiple Combination:{
-            \begin{enumerate}
-                \item $\binom{n}{k_1,k_2,\ldots,k_m}=\frac{n!}{k_1!k_2!\ldots k_m!}$ where $n=\sum_{i=1}^{m}k_i$.
-                \item For the two cases situation, $n=k_1+k_2\Rightarrow \binom{n}{k_1k_2}=\frac{n!}{k_1!k_2!}\iff\binom{n}{k_1}\iff\binom{n}{k_2}$.
-            \end{enumerate}
-            }
-    \end{enumerate}
-    \item Independent Trails 
-    % (\textbf{Essentially the outcomes in each sample space are not necessarily equiprobable})
-    \begin{enumerate}
-        \item \textit{Theorem 2.8:} The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}.\]
-        \item \textit{Theorem 2.9:} $n=k_1+k_2+\cdots+k_m$ and success rates are $p_1, p_2,\ldots,p_m$, where $\sum_{i=1}^{m}p_i=1$ has
-        \[\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.\]
-        % \item If the outcomes in each sample space is equiprobable, the question can be solved by Sampling with Replacement.
-    \end{enumerate}
-    \item Tree Diagram
+    \item If $A_i$ are Mutually Exclusive: $\condP{\cup_{i=1}^{N}A_i}{B} = \sum_{i=1}^{N}\condP{A_i}{B}$.
+    \item If $A_i$ are Collectively Exhaustive: $\condP{\cup_{i=1}^N A_i}{B}=\condP{\Omega}{B}=\P{\Omega B}/\P{B}=1$.
+    \item If $A_i$ are partitions: $\sum_{i=1}^{N}\condP{A_i}{B}=\condP{\cup_{i=1}^{N}A_i}{B}=\condP{\Omega}{B}=\P{\Omega B}/\P{B}=1$.
+    \item If $B_i$ are Mutually Exclusive: \[\condP{A}{\cup_{i=1}^{N}B_i} = \P{A\cap(\cup_{i=1}^N B_i)}/\P{\cup_{i=1}^N B_i}=\sum_{i=1}^{N}\P{AB_i}/\sum_{i=1}^N\P{B_i}.\]
+    \item If $B_i$ are Collectively Exhaustive: $\condP{A}{\cup_{i=1}^{N}B_i} = \condP{A}{\Omega}=\P{A\Omega}/\P{\Omega}=\P{A}$
+    \item If $B_i$ are Partitions \textbf{(Law of Total Number)},
+    \begin{align}
+        \condP{A}{B}
+        &= \sum_{i=1}^{N}\P{AB_i}/\sum_{i=1}^N\P{B_i} \tag{$B_i$ are Mutually Exclusive} \\
+        &= \sum_{i=1}^{N}\P{AB_i}  \tag{$B_i$ are Collectively Exhaustive} \\
+        &= \sum_{i=1}^{N}\condP{A}{B_i}\P{B_i}. \tag{Definition of Conditional Probability}
+    \end{align}
 \end{enumerate}
+
+\begin{theorem}
+    [$\P{\cdot\mid F}$ is a Probability]
+    The conditional probability satisfies the axioms of probability.
+    \begin{enumerate}
+        \item $0\leq\condP{E}{F}\leq 1$.
+        \item $\condP{\Omega}{F}=1$.
+        \item If $E_i$ are mutually exclusive, then $\condP{\cup_{i=1}^{N}E_i}{F}=\sum_{i=1}^{N}\condP{E_i}{F}$.
+    \end{enumerate}
+\end{theorem}
+
+\begin{theorem}
+    [Bayes' Theorem]
+    If $\P{A}>0$ and $\P{B}>0$, then
+    \begin{equation*}
+        \condP{A}{B} = \frac{\condP{B}{A}\P{A}}{\P{B}}.
+    \end{equation*}
+\end{theorem}
+
+\section{Independence}
+\begin{definition}
+    [Independence]
+    $A$ and $B$ are independent if and only if $\P{AB}=\P{A}\P{B}$.
+\end{definition}
+
+\begin{theorem}
+    If $A$ and $B$ are independent, then
+    \begin{enumerate}
+        \item $\P{A \cup B} = \P{A}+\P{B}-\P{A}\P{B}$.
+        \item $\condP{A}{B} = \frac{\P{AB}}{\P{B}}=\frac{\P{A}\P{B}}{\P{B}}=\P{A}$. \label{item:independent}
+        \item If $A$ and $B$ are independent then $A^{\mathsf{c}}$ and $B$ are independent and so on.{
+            \begin{proof}
+                \begin{align*}
+                    \P{B} = \P{(A\cup A^{\mathsf{c}})\cap B}
+                    &= \P{AB}+\P{A^{\mathsf{c}}B}  \tag{$A$ and $A^\mathsf{c}$ are partitions}\\
+                    \Rightarrow \P{A^{\mathsf{c}}B}
+                    &= \P{B}-\P{AB} \\
+                    &= \P{B}-\P{A}\P{B}  \tag{$A$ and $B$ are independent}\\
+                    &= \P{B}\left(1-\P{A}\right) \\
+                    &= \P{B}\P{A^{\mathsf{c}}}.
+                \end{align*}
+            \end{proof}
+        }
+    \end{enumerate}
+\end{theorem}
+
+\begin{theorem}
+    [Independent Trails]
+    The Probability of $k_0$ failures and $k_1$ successes in $n=k_0+k_1$ Independent Trails with success rate $p$ is \[\binom{n}{k_0}(1-p)^{k0}p^{k_1}=\binom{n}{k_1}(1-p)^{k0}p^{k_1}.\]
+    If $n=k_1+k_2+\cdots+k_m$ and success rates are $p_1, p_2,\ldots,p_m$, where $\sum_{i=1}^{m}p_i=1$, the probability of such independent trails is
+    \[\binom{n}{k_1,k_2,\ldots,k_m}p_1^{k_1}p_2^{k_2}\ldots p_m^{k^m}.\]
+\end{theorem}
+
+\section{Tree Diagram}
